# lease-data-foundation

./: .env.example  .gitignore  README.md  docker-compose.env.example  docker-compose.yml  main.py  pyproject.toml
docs/: AddressBase.md  ApplyUpdate.md  Developer.md  ServerSetup.md  Setup.md  performance.txt
legacy/: env.txt  lease-prototype-run.txt  phase2_documentation.docx  t5_inferencing.py  t5_training.py  term_mistral_api.py
notebooks/: .env.example  Experimental_queries.ipynb  README.md  district_lease_expiry_report.ipynb  district_leasehold_counts.ipynb  lease_expiry_heatmap.ipynb  requirements.txt  search_correlation.ipynb  short_lease_search_analysis.ipynb
notebooks/data/: README.md  district_leasehold_counts.csv  districts.geojson  lease_expiry_analysis.csv  regions.geojson
queries/: addressbase.mq  leases_ext.mq  parsing.mq
src/: __init__.py  main.py  main_extractor.py  main_queries.py  main_regex_extractor.py  main_t5_extractor.py
src/addressbase/: address_parser.py  drop_data.py  load_data.py  match_addresses.py  post_process_denormalizer.py
src/data/: apply_update.py  check_for_updates.py
src/db_patch/: delete_short_leases.py
src/enricher/: __init__.py  update_mongo_from_csv.py
src/utils/: lease_term_validator.py  mongo_client.py  regex_extractors.py  t5_extractor.py
tests/: test_address_parser.py  test_apply_update.py  test_lease_term_validator.py  test_postcodes_io.py  test_regex_extractors.py  test_t5_extractor.py  test_update_mongo_from_csv.py
