[project]
name = "lease-data-foundation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.10.8",
    "protobuf==6.33.2",
    "pymongo>=4.16.0",
    "seaborn==0.13.2",
    "sentencepiece==0.2.1",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "transformers==4.57.3",
]
